--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,6 @@ llama-index>=0.9.0
 llama-cpp-python>=0.2.0
 llama-hub>=0.0.1
 llama-parse>=0.0.1
-llama-rag>=0.0.1 
+llama-rag>=0.0.1
+streamlit==1.32.0
+requests==2.31.0 
