--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,7 @@ llama-index>=0.9.0
 llama-cpp-python>=0.2.0
 llama-hub>=0.0.1
 llama-parse>=0.0.1
-llama-rag>=0.0.1 
+llama-rag>=0.0.1
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0 
